--- a/推荐软件.html
+++ b/推荐软件.html
@@ -17,13 +17,13 @@
 			推荐软件
 		</h4>
 	</a>
-	<a target="_blank" href="https://www.123pan.com/s/GLTtVv-jycjH.html" class="list-group-item">
+	<a href="https://www.123pan.com/s/GLTtVv-jycjH.html" class="list-group-item">
 		<h4 class="list-group-item-heading">
 			<img src="./格式工厂.jpg" class="img-rounded">
 			格式工厂<br>           免费多功能的多媒体文件转换工具。
 		</h4>
 	</a>
-	<a target="_blank" href="https://www.123pan.com/s/GLTtVv-TVcjH.html" class="list-group-item">
+	<a href="https://www.123pan.com/s/GLTtVv-TVcjH.html" class="list-group-item">
 		<h4 class="list-group-item-heading">
 			<img src="./WattToolkit.png" class="img-rounded">
 			Watt Toolkit<br>           Watt Toolkit是一款整合了众多Steam工具与一身的多功能工具箱。
