--- a/推荐软件.html
+++ b/推荐软件.html
@@ -17,18 +17,66 @@
 			推荐软件
 		</h4>
 	</a>
-	<a target="_blank" href="https://www.123pan.com/s/GLTtVv-jycjH.html" class="list-group-item">
-		<h4 class="list-group-item-heading">
+	<a class="list-group-item">
 			<img src="./格式工厂.jpg" class="img-rounded">
 			格式工厂<br>           免费多功能的多媒体文件转换工具。
-		</h4>
+<!-- 按钮触发模态框 -->
+<br><br><button class="btn btn-primary btn-lg" data-toggle="modal" data-target="#格式工厂">
+	下载方式
+</button>
+<!-- 模态框（Modal） -->
+<div class="modal fade" id="格式工厂" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+	<div class="modal-dialog">
+		<div class="modal-content">
+			<div class="modal-header">
+				<button type="button" class="close" data-dismiss="modal" aria-hidden="true">
+					&times;
+				</button>
+				<h4 class="modal-title" id="myModalLabel">
+					下载方式
+				</h4>
+			</div>
+			<div class="modal-body">
+				123云盘:www.123pan.com/s/GLTtVv-jycjH.html
+				<br>官方网站:www.pcgeshi.com
+			</div>
+			<div class="modal-footer">
+				<button type="button" class="btn btn-default" data-dismiss="modal">关闭
+				</button>
+			</div>
+		</div><!-- /.modal-content -->
+	</div><!-- /.modal -->
+</div>
 	</a>
-	<a target="_blank" href="https://www.123pan.com/s/GLTtVv-TVcjH.html" class="list-group-item">
-		<h4 class="list-group-item-heading">
+	<a class="list-group-item">
 			<img src="./WattToolkit.png" class="img-rounded">
 			Watt Toolkit<br>           Watt Toolkit是一款整合了众多Steam工具与一身的多功能工具箱。
-		</h4>
-	</a>
+<!-- 按钮触发模态框 -->
+<br><br><button class="btn btn-primary btn-lg" data-toggle="modal" data-target="#WattToolkit">
+	下载方式
+</button>
+<!-- 模态框（Modal） -->
+<div class="modal fade" id="WattToolkit" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+	<div class="modal-dialog">
+		<div class="modal-content">
+			<div class="modal-header">
+				<button type="button" class="close" data-dismiss="modal" aria-hidden="true">
+					&times;
+				</button>
+				<h4 class="modal-title" id="myModalLabel">
+					下载方式
+				</h4>
+			</div>
+			<div class="modal-body">
+				123云盘:www.123pan.com/s/GLTtVv-TVcjH.html
+				<br>官方网站:steampp.net
+			</div>
+			<div class="modal-footer">
+				<button type="button" class="btn btn-default" data-dismiss="modal">关闭
+				</button>
+			</div>
+		</div><!-- /.modal-content -->
+	</div><!-- /.modal -->
 </div>
 
 </body>
